[package]
name = "devctl"
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "A lightweight DevOps control CLI for formatting, Terraform planning, and project commands."
repository = "https://github.com/TrollProxy/DevCTL"
keywords = ["devops", "cli", "terraform", "formatter", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "devctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
clap_mangen = "0.3"
directories = "6.0"
globset = "0.4"
ignore = "0.4"
owo-colors = "4.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"] }
which = "8.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
